# rust-github-openapi

./: .pre-commit-config.yaml  Makefile  README.md
lib/: Cargo.toml
lib/src/: lib.rs
